# nix-hapi

./: Cargo.toml  ERROR_HANDLING.org  PROVIDER_API.org  README.org  config.example.toml  flake.nix  ldap-tasks.org  overview.org  rust-template.json  tasks.org
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  logging.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/fake/: Cargo.toml
crates/fake/src/: lib.rs  main.rs
crates/fake/tests/: derived_from_integration.rs  subprocess_test.rs  wave_ordering.rs
crates/ldap/: Cargo.toml
crates/ldap/nix/: default.nix
crates/ldap/src/: config.rs  connection.rs  desired_state.rs  lib.rs  live_state.rs  main.rs  operations.rs  provider.rs  reconcile.rs  runbook.rs
crates/ldap/tests/: ldap_integration.rs
crates/ldap/tests/common/: mod.rs
crates/lib/: Cargo.toml
crates/lib/src/: dag.rs  derived.rs  executor.rs  field_value.rs  jq_expr.rs  lib.rs  meta.rs  plan.rs  provider.rs  provider_host.rs  saturation.rs  subprocess.rs
nix/lib/: default.nix
nix/modules/: darwin.nix  default.nix  nixos.nix
