[package]
name = "nix-hapi-fake"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "nix-hapi-fake"
path = "src/main.rs"

[dependencies]
nix-hapi-lib = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
