[package]
name = "nix-hapi-ldap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "nix-hapi-ldap"
path = "src/main.rs"

[dependencies]
nix-hapi-lib = { workspace = true }
ldap3 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
